# Kinema

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  USAGE.md  make-source-zip.sh  package.bat  package.sh  vcpkg.json
.github/workflows/: build.yml
.serena/: project.yml
.serena/memories/: code_style.md  project_overview.md  suggested_commands.md  task_completion.md
.serena/memories/kinema/: implementation-progress.md
assets/: icon.icns
assets/materials/: skinned.mat  unlit.mat
assets/shaders/: skinned.frag  skinned.vert  unlit.vert
cmake/: Info.plist.in  copy_dlls.cmake  fixup_bundle.cmake  kinema.rc
src/: Application.cpp  Application.h  main.cpp
src/modules/: ArucoMarkerDetector.cpp  ArucoMarkerDetector.h  EvalLogger.cpp  EvalLogger.h  GlbExporter.cpp  GlbExporter.h  HSVMarkerDetector.cpp  HSVMarkerDetector.h  MarkerAssigner.cpp  MarkerAssigner.h  MarkerConfigIO.cpp  MarkerConfigIO.h  MarkerDetection.cpp  MarkerDetection.h  MarkerDetector.cpp  MarkerDetector.h  MarkerStabilizer.cpp  MarkerStabilizer.h  MotionRecorder.cpp  MotionRecorder.h  RGBRatioMarkerDetector.cpp  RGBRatioMarkerDetector.h  SkeletonDriver.cpp  SkeletonDriver.h  VideoExporter.cpp  VideoExporter.h
src/ui/: UIManager.cpp  UIManager.h
tools/: generate_icons.py
